Bug 6275 - qla1280 times out on long operations such as tape rewind
Summary: qla1280 times out on long operations such as tape rewind
Status: CLOSED CODE_FIX
Alias: None
Product: SCSI Drivers
Classification: Unclassified
Component: Other (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Jes Sorensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-03-23 06:34 UTC by Ian Dall
Modified: 2006-12-03 04:42 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.16
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
A patch to qla1280.c. (661 bytes, patch)
2006-03-23 06:38 UTC, Ian Dall
Details | Diff

Description Ian Dall 2006-03-23 06:34:20 UTC
Most recent kernel where this bug did not occur: unknown
Distribution:Fedora Core 3
Hardware Environment:Intel Pentium III S, QLogic QLA12160 PCI to SCSI Host
Adapter, Dell PowerVault 110T Ultrium
Software Environment:
Problem Description:
When performing long scsi operations, such as tape rewinds or seeks, the command
fails. Sample syslog entry:

Mar 19 21:48:40 sibyl kernel: scsi(0): Resetting Cmnd=0xe850bce0,
Handle=0x00000002, action=0x0
Mar 19 21:48:40 sibyl kernel: qla1280_mailbox_command: Command failed, mailbox0
= 0x0015, mailbox_out0 = 0x4005, istatus = 0x6000
Mar 19 21:48:40 sibyl kernel: m0 4005, m1 8600, m2 0000, m3 0001
Mar 19 21:48:40 sibyl kernel: m4 00f9, m5 0006, m6 0000, m7 0000
Mar 19 21:48:40 sibyl kernel: scsi(0:1:6:0): Unable to abort command!
Mar 19 21:48:40 sibyl kernel: scsi(0): Resetting Cmnd=0xe850bce0,
Handle=0x00000002, action=0x2
Mar 19 21:48:40 sibyl kernel: scsi(0:1:6:0): Queueing device reset command.
Mar 19 21:48:53 sibyl kernel: scsi(0): Resetting Cmnd=0xe850bce0,
Handle=0x00000001, action=0x0
Mar 19 21:48:57 sibyl kernel: scsi(0): Resetting Cmnd=0xe850bce0,
Handle=0x00000001, action=0x3
Mar 19 21:48:57 sibyl kernel: qla1280(0:1): Issuing BUS DEVICE RESET

Steps to reproduce:
1. Create a tape with lots of data. There needs to be enough so that a rewind or
a seek will take more than 30seconds.
2. Seek to end of tape. I used "mt fsf 5" (because I had 5 partitions dumped to
the tape) but "mt eod" might do. Note the the tape appears to seek correctly,
but the command fails. Seeking one tape file at a time ("mt fsf 1") works for me
but that presumably depends on the size of the tape file. "mt rewind" from the
end of the tape fails in a similar way to a long seek.

Examine syslog.
Comment 1 Ian Dall 2006-03-23 06:38:42 UTC
Created attachment 7648 [details]
A patch to  qla1280.c.

The command sent to the card was using a 30second timeout regardless of the
timeout requested in the scsi command passed down from higher levels.
Comment 2 Jes Sorensen 2006-08-25 01:03:02 UTC
I have just been made aware of this patch by mkp - being the current owner of
the driver, it would have worked a little faster if I had been CC'ed :)

At first glance it looks like the patch is good, but I would like to just check
it before I push it to James.

Cheers,
Jes
Comment 3 R. Scott Bailey 2006-10-11 12:42:47 UTC
The status of this problem could be changed to VERIFIED, as I see the patch is 
included in 2.6.19-rc1. Right?
Comment 4 Adrian Bunk 2006-12-03 04:42:28 UTC
Patch is in 2.6.19.

Note You need to log in before you can comment on or make changes to this bug.